Timekeeper page = fix the signature to stop shift.

--- a/heavyconnect/static/css/styleSmall.css
+++ b/heavyconnect/static/css/styleSmall.css
@@ -204,7 +204,7 @@ input[type=button]{
 	box-shadow: 2px 2px 5px gray;
 	color: white;
 	padding-top: 82px;
-	font-size: 15px;
+	font-size: 14.5px;
 	font-weight: 600;
 }
 #driverMenu{
@@ -299,16 +299,63 @@ input[type=button]{
 	font-size: 25px;
 	font-weight: 700;
 	margin-top: 10px;
-	margin-bottom: 90px;
+	margin-bottom: 93px;
 }
 .btnColTime {
 	padding: 0px;
 }
-.signModalDialog{
-	width: 100%;
-	min-height: 300px;
-	min-width: 601px;
+	/* MODAL SGNATURE BEGIN */
+#titleSign {
+	text-align: center;
+	font-size: 25px;
+	color: #5D7D1B;
+	font-weight: 600;
 }
+.signModalDialog{
+	width: 90%;
+	margin: auto;
+	margin-top: 20px;
+	border-radius: 8px;
+}
+#signatureContent {
+	height: 190px;
+}
+.closeSignature {
+	background: url('../imgSmall/buttons/esc.png') no-repeat top left;
+	background-size: 100% 100%;
+	width: 50px;
+	height: 50px;
+	float: right;
+	border: none;
+	border-radius: 7px;
+	box-shadow: -1px 1px 7px gray;
+	margin: 0px;
+	padding: 0px;
+}
+	/* MODAL SGNATURE BEGIN */
+	/* MODAL TIMEKEEPER BEGIN */
+.modalTimekeeper {
+	font-size: 30px;
+	font-weight: 600;
+	border-radius: 10px;
+	width: 90%;
+	margin: auto;
+	margin-top: 70px;
+	color: #BB330C;
+}
+.closeTimekeeper {
+	background: url('../imgSmall/buttons/esc.png') no-repeat top left;
+	background-size: 100% 100%;
+	width: 50px;
+	height: 50px;
+	float: right;
+	border: none;
+	border-radius: 7px;
+	box-shadow: -1px 1px 7px gray;
+	margin: 0px;
+	padding: 0px;
+}
+	/* MODAL TIMEKEEPER BEGIN /*
 /*** Timekeeper Page End ***/
 
 /*** Taskflow Page Begin ***/
